--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:23:26 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:24:09 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -326,8 +326,8 @@ Missed Cut</td>
 E thru 5</td>
       <td>Will Zalatoris -1
 E thru 6</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick E
-E thru 8</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +1
++1 thru 9</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -346,22 +346,6 @@ E thru 5</td>
 -1 (F)</td>
       <td class="greyout">Jon Rahm +4
 +2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler -9
--1 thru 2</td>
-      <td>Cameron Smith(W) -2
-E thru 5</td>
-      <td>Matthew Fitzpatrick E
-E thru 8</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -392,6 +376,22 @@ E thru 5</td>
 E thru 5</td>
       <td class="greyout leftborder">Marc Leishman +3
 -1 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -9
+-1 thru 2</td>
+      <td>Cameron Smith(W) -2
+E thru 5</td>
+      <td>Matthew Fitzpatrick +1
++1 thru 9</td>
+      <td>Patrick Cantlay +3
++2 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -556,22 +556,6 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-2</td>
-      <td>Shane Lowry -4
--1 thru 2</td>
-      <td>Dustin Johnson(W) -3
--1 thru 4</td>
-      <td>Matthew Fitzpatrick E
-E thru 8</td>
-      <td>Tony Finau +5
-+3 thru 15</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-2</td>
       <td>Shane Lowry(W) -4
@@ -602,6 +586,22 @@ E thru 6</td>
 -1 (F)</td>
       <td class="greyout">Jon Rahm(W) +4
 +2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-1</td>
+      <td>Shane Lowry -4
+-1 thru 2</td>
+      <td>Dustin Johnson(W) -3
+-1 thru 4</td>
+      <td>Matthew Fitzpatrick +1
++1 thru 9</td>
+      <td>Tony Finau +5
++3 thru 15</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
