--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:23:26 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:24:09 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -182,8 +182,8 @@ Missed Cut</td>
 E thru 5</td>
       <td>Will Zalatoris -1
 E thru 6</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick E
-E thru 8</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +1
++1 thru 9</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
