--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:28:27 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:29:10 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -173,13 +173,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-9</td>
+      <td class="bigbold">-10</td>
       <td>Shane Lowry -4
 -1 thru 3</td>
+      <td>Cameron Smith -3
+-1 thru 6</td>
       <td>Justin Thomas(W) -2
 -1 thru 7</td>
-      <td>Cameron Smith -2
-E thru 5</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +1
@@ -205,11 +205,11 @@ E thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -3
+-1 thru 6</td>
       <td>Justin Thomas -2
 -1 thru 7</td>
-      <td>Cameron Smith -2
-E thru 5</td>
       <td>Joaquin Niemann E
 +1 thru 7</td>
       <td>Tommy Fleetwood(W) +1
@@ -221,9 +221,9 @@ E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith(W) -2
-E thru 5</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -3
+-1 thru 6</td>
       <td>Justin Thomas -2
 -1 thru 7</td>
       <td>Corey Conners -1
@@ -269,9 +269,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">2</td>
-      <td>Cameron Smith(W) -2
-E thru 5</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith(W) -3
+-1 thru 6</td>
       <td>Collin Morikawa -1
 E thru 6</td>
       <td>Rory McIlroy +2
