--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:29:10 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:30:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -163,11 +163,11 @@ Missed Cut</td>
       <td>Shane Lowry -4
 -1 thru 3</td>
       <td>Justin Thomas(W) -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Will Zalatoris -1
 E thru 6</td>
-      <td class="greyout leftborder">Patrick Cantlay +3
-+2 thru 9</td>
+      <td class="greyout leftborder">Patrick Cantlay +4
++3 thru 10</td>
       <td class="greyout">Tony Finau +5
 +3 thru 16</td>
     </tr>
@@ -179,7 +179,7 @@ E thru 6</td>
       <td>Shane Lowry -4
 -1 thru 3</td>
       <td>Justin Thomas(W) -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Corey Conners -1
 E thru 5</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -212,10 +212,10 @@ Missed Cut</td>
 -1 thru 3</td>
       <td>Cameron Smith(W) -3
 -1 thru 6</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td>Viktor Hovland +3
 -1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +4
++3 thru 10</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -278,8 +278,8 @@ Missed Cut</td>
 -1 thru 6</td>
       <td>Corey Conners -1
 E thru 5</td>
-      <td class="greyout leftborder">Patrick Cantlay +3
-+2 thru 9</td>
+      <td class="greyout leftborder">Patrick Cantlay +4
++3 thru 10</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -307,7 +307,7 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 6</td>
       <td>Justin Thomas(W) -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +1
@@ -355,7 +355,7 @@ Missed Cut</td>
       <td>Hideki Matsuyama -2
 +1 thru 4</td>
       <td>Justin Thomas -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Corey Conners -1
 E thru 5</td>
       <td class="greyout leftborder">Marc Leishman +3
@@ -365,35 +365,19 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-7</td>
       <td>Scottie Scheffler -9
 -1 thru 2</td>
       <td>Cameron Smith(W) -3
 -1 thru 6</td>
       <td>Matthew Fitzpatrick +1
 +1 thru 9</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 2</td>
-      <td>Corey Conners -1
-E thru 5</td>
-      <td>Rory McIlroy +2
-E thru 13</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
-      <td class="greyout leftborder">Robert MacIntyre +4
-+2 thru 10</td>
-      <td class="greyout">Jon Rahm +4
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -401,15 +385,31 @@ E thru 13</td>
       <td>Scottie Scheffler -9
 -1 thru 2</td>
       <td>Justin Thomas(W) -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Rory McIlroy +2
 E thru 13</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td>Viktor Hovland +3
 -1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +4
++3 thru 10</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler(W) -9
+-1 thru 2</td>
+      <td>Corey Conners -1
+E thru 5</td>
+      <td>Rory McIlroy +2
+E thru 13</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
+      <td class="greyout leftborder">Robert MacIntyre +4
++2 thru 10</td>
+      <td class="greyout">Jon Rahm +4
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -419,11 +419,11 @@ Missed Cut</td>
       <td>Cameron Smith -3
 -1 thru 6</td>
       <td>Justin Thomas(W) -2
--1 thru 7</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 8</td>
+      <td>Viktor Hovland +3
 -1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +4
++3 thru 10</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -451,7 +451,7 @@ Missed Cut</td>
       <td>Hideki Matsuyama -2
 +1 thru 4</td>
       <td>Justin Thomas -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Rory McIlroy(W) +2
 E thru 13</td>
       <td class="greyout leftborder">Tiger Woods +4
@@ -461,15 +461,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Scottie Scheffler -9
 -1 thru 2</td>
       <td>Corey Conners -1
 E thru 5</td>
-      <td>Patrick Cantlay(W) +3
-+2 thru 9</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
+      <td>Patrick Cantlay(W) +4
++3 thru 10</td>
       <td class="greyout leftborder">Jon Rahm +4
 +2 thru 12</td>
       <td class="greyout">Sam Burns
@@ -481,7 +481,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -3
 -1 thru 6</td>
       <td>Justin Thomas -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Corey Conners -1
 E thru 5</td>
       <td>Viktor Hovland +3
@@ -489,38 +489,6 @@ E thru 5</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -3
--1 thru 6</td>
-      <td>Justin Thomas(W) -2
--1 thru 7</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 2</td>
-      <td>Cameron Smith -3
--1 thru 6</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
-      <td>Billy Horschel +8
-+5 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -532,18 +500,34 @@ Missed Cut</td>
 E thru 5</td>
       <td>Will Zalatoris -1
 E thru 6</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout">Jon Rahm(W) +4
+      <td class="greyout leftborder">Jon Rahm(W) +4
 +2 thru 12</td>
+      <td class="greyout">Patrick Cantlay +4
++3 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -3
+-1 thru 6</td>
+      <td>Justin Thomas(W) -2
+-1 thru 8</td>
+      <td>Will Zalatoris -1
+E thru 6</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-2</td>
       <td>Justin Thomas -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Collin Morikawa -1
 E thru 6</td>
       <td>Will Zalatoris -1
@@ -559,7 +543,7 @@ E thru 13</td>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-2</td>
       <td>Justin Thomas(W) -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Corey Conners -1
 E thru 5</td>
       <td>Will Zalatoris -1
@@ -620,6 +604,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler(W) -9
+-1 thru 2</td>
+      <td>Cameron Smith -3
+-1 thru 6</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
+      <td>Billy Horschel +10
++7 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler -9
@@ -655,7 +655,7 @@ Missed Cut</td>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">2</td>
       <td>Justin Thomas -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Collin Morikawa(W) -1
 E thru 6</td>
       <td>Rory McIlroy +2
@@ -668,26 +668,10 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">3</td>
-      <td>Hideki Matsuyama -2
-+1 thru 4</td>
-      <td>Justin Thomas -2
--1 thru 7</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
-      <td>Jon Rahm(W) +4
-+2 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">3</td>
       <td>Justin Thomas -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Corey Conners -1
 E thru 5</td>
       <td>Rory McIlroy +2
@@ -697,22 +681,6 @@ E thru 13</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">4</td>
-      <td>Collin Morikawa -1
-E thru 6</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
-      <td class="greyout leftborder">Jon Rahm +4
-+2 thru 12</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -732,26 +700,10 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">4</td>
-      <td>Hideki Matsuyama -2
-+1 thru 4</td>
-      <td>Collin Morikawa(W) -1
-E thru 6</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
-      <td>Jon Rahm +4
-+2 thru 12</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">4</td>
       <td>Justin Thomas(W) -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td>Viktor Hovland +3
@@ -764,10 +716,26 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">4</td>
+      <td>Hideki Matsuyama -2
++1 thru 4</td>
+      <td>Justin Thomas -2
+-1 thru 8</td>
+      <td>Jon Rahm(W) +4
++2 thru 12</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">4</td>
       <td>Justin Thomas -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Will Zalatoris -1
 E thru 6</td>
       <td>Viktor Hovland +3
@@ -780,16 +748,48 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">Walk 1</td>
       <td class="bigbold">5</td>
+      <td>Collin Morikawa -1
+E thru 6</td>
+      <td>Will Zalatoris -1
+E thru 6</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
+      <td class="greyout leftborder">Jon Rahm +4
++2 thru 12</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">5</td>
+      <td>Hideki Matsuyama -2
++1 thru 4</td>
+      <td>Collin Morikawa(W) -1
+E thru 6</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
+      <td>Jon Rahm +4
++2 thru 12</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">6</td>
       <td>Dustin Johnson -3
 -1 thru 4</td>
       <td>Rory McIlroy(W) +2
 E thru 13</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
       <td class="greyout leftborder">Jon Rahm +4
 +2 thru 12</td>
       <td class="greyout">Jordan Spieth
@@ -797,13 +797,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Scottie Scheffler -9
 -1 thru 2</td>
       <td>Dustin Johnson -3
 -1 thru 4</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
       <td>Adam Scott +12
 +8 (F)</td>
       <td class="greyout leftborder">Brooks Koepka(W)
@@ -845,13 +845,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Justin Thomas -2
--1 thru 7</td>
+-1 thru 8</td>
       <td>Rory McIlroy +2
 E thru 13</td>
-      <td>Patrick Cantlay(W) +3
-+2 thru 9</td>
+      <td>Patrick Cantlay(W) +4
++3 thru 10</td>
       <td>Jon Rahm +4
 +2 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -861,34 +861,18 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Justin Thomas(W) -2
--1 thru 7</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
+-1 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Daniel Berger +4
 +2 thru 15</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
       <td class="greyout leftborder">Jon Rahm +4
 +2 thru 12</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">9</td>
-      <td>Dustin Johnson -3
--1 thru 4</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm +4
-+2 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -908,14 +892,30 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">10</td>
+      <td>Dustin Johnson -3
+-1 thru 4</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
+      <td>Jon Rahm +4
++2 thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">12</td>
       <td>Collin Morikawa -1
 E thru 6</td>
-      <td>Patrick Cantlay +3
-+2 thru 9</td>
       <td>Jon Rahm(W) +4
 +2 thru 12</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
       <td>Tony Finau +5
 +3 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka
