--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:31:28 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:32:11 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -285,9 +285,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">3</td>
-      <td>Dustin Johnson -3
--1 thru 4</td>
+      <td class="bigbold">4</td>
+      <td>Dustin Johnson -2
+E thru 5</td>
       <td>Justin Thomas -2
 -1 thru 8</td>
       <td>Corey Conners -1
@@ -333,9 +333,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">10</td>
-      <td>Dustin Johnson -3
--1 thru 4</td>
+      <td class="bigbold">11</td>
+      <td>Dustin Johnson -2
+E thru 5</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +4
