--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:35:03 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:35:46 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -142,14 +142,14 @@ body {
     <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-16</td>
-      <td>Scottie Scheffler -9
--1 thru 2</td>
+      <td>Scottie Scheffler -10
+-2 thru 3</td>
       <td>Shane Lowry -4
 -1 thru 4</td>
       <td>Justin Thomas(W) -2
 -1 thru 8</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
       <td class="greyout leftborder">Patrick Cantlay +4
 +3 thru 10</td>
       <td class="greyout">Tony Finau +5
@@ -158,12 +158,12 @@ E thru 6</td>
     <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-12</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 2</td>
+      <td>Scottie Scheffler(W) -10
+-2 thru 3</td>
       <td>Shane Lowry -4
 -1 thru 4</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
       <td>Jon Rahm +4
 +2 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -173,15 +173,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-9</td>
       <td>Shane Lowry -4
 -1 thru 4</td>
       <td>Cameron Smith -3
 -1 thru 6</td>
       <td>Justin Thomas(W) -2
 -1 thru 8</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +1
 +1 thru 9</td>
       <td class="greyout">Brooks Koepka
@@ -216,8 +216,8 @@ E thru 6</td>
 +2 thru 13</td>
       <td class="greyout leftborder">Patrick Cantlay +4
 +3 thru 10</td>
-      <td class="greyout">Tyrrell Hatton +4
-+2 thru 12</td>
+      <td class="greyout">Tyrrell Hatton +7
++5 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -237,13 +237,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">0</td>
       <td>Justin Thomas -2
 -1 thru 8</td>
-      <td>Collin Morikawa -1
-E thru 6</td>
       <td>Sungjae Im -1
-+2 thru 3</td>
++2 thru 4</td>
+      <td>Collin Morikawa E
++1 thru 7</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +4
@@ -253,13 +253,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">2</td>
       <td>Justin Thomas(W) -2
 -1 thru 8</td>
-      <td>Collin Morikawa -1
-E thru 6</td>
-      <td>Will Zalatoris -1
-E thru 6</td>
+      <td>Collin Morikawa E
++1 thru 7</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
       <td>Daniel Berger +4
 +2 thru 15</td>
       <td class="greyout leftborder">Tony Finau +5
@@ -269,11 +269,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Cameron Smith(W) -3
 -1 thru 6</td>
-      <td>Collin Morikawa -1
-E thru 6</td>
+      <td>Collin Morikawa E
++1 thru 7</td>
       <td>Rory McIlroy +2
 E thru 14</td>
       <td>Patrick Cantlay +4
@@ -301,25 +301,25 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Corey Conners(W) -1
 E thru 6</td>
-      <td>Collin Morikawa -1
-E thru 6</td>
+      <td>Collin Morikawa E
++1 thru 7</td>
       <td>Jon Rahm +4
 +2 thru 13</td>
       <td>Daniel Berger +4
 +2 thru 15</td>
-      <td class="greyout leftborder">Robert MacIntyre +4
-+2 thru 10</td>
+      <td class="greyout leftborder">Robert MacIntyre +6
++4 thru 11</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">10</td>
-      <td>Collin Morikawa -1
-E thru 6</td>
+      <td class="bigbold">11</td>
+      <td>Collin Morikawa E
++1 thru 7</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Jon Rahm +4
@@ -349,9 +349,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">12</td>
-      <td>Collin Morikawa -1
-E thru 6</td>
+      <td class="bigbold">13</td>
+      <td>Collin Morikawa E
++1 thru 7</td>
       <td>Jon Rahm(W) +4
 +2 thru 13</td>
       <td>Patrick Cantlay +4
