--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:42:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:43:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,22 +139,6 @@ body {
   </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-17</td>
-      <td>Scottie Scheffler(W) -10
--2 thru 3</td>
-      <td>Cameron Smith -3
--1 thru 6</td>
-      <td>Hideki Matsuyama -2
-+1 thru 4</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-17</td>
@@ -186,6 +170,22 @@ Missed Cut</td>
 +3 thru 10</td>
       <td class="greyout">Tony Finau +4
 +2 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-15</td>
+      <td>Scottie Scheffler(W) -10
+-2 thru 3</td>
+      <td>Cameron Smith -3
+-1 thru 6</td>
+      <td>Hideki Matsuyama E
++3 thru 5</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -268,22 +268,6 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
-      <td class="bigbold">-10</td>
-      <td>Shane Lowry -4
--1 thru 4</td>
-      <td>Cameron Smith(W) -3
--1 thru 6</td>
-      <td>Hideki Matsuyama -2
-+1 thru 4</td>
-      <td>Corey Conners -1
-E thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Jon Rahm +4
-+2 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-10</td>
       <td>Shane Lowry -4
@@ -291,7 +275,7 @@ E thru 6</td>
       <td>Cameron Smith -3
 -1 thru 6</td>
       <td>Dustin Johnson(W) -2
-E thru 5</td>
+E thru 6</td>
       <td>Corey Conners -1
 E thru 6</td>
       <td class="greyout leftborder">Patrick Cantlay +4
@@ -348,20 +332,20 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">The Resort</td>
       <td class="bigbold">-8</td>
+      <td>Shane Lowry -4
+-1 thru 4</td>
       <td>Cameron Smith(W) -3
 -1 thru 6</td>
-      <td>Hideki Matsuyama -2
-+1 thru 4</td>
-      <td>Justin Thomas -2
--1 thru 8</td>
       <td>Corey Conners -1
 E thru 6</td>
-      <td class="greyout leftborder">Marc Leishman +3
+      <td>Hideki Matsuyama E
++3 thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
+      <td class="greyout">Jon Rahm +4
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -412,6 +396,22 @@ E thru 14</td>
 +4 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -3
+-1 thru 6</td>
+      <td>Justin Thomas -2
+-1 thru 8</td>
+      <td>Corey Conners -1
+E thru 6</td>
+      <td>Hideki Matsuyama E
++3 thru 5</td>
+      <td class="greyout leftborder">Marc Leishman +3
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-6</td>
       <td>Shane Lowry -4
@@ -425,38 +425,6 @@ E thru 14</td>
       <td class="greyout leftborder">Patrick Cantlay +4
 +3 thru 10</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -3
--1 thru 6</td>
-      <td>Hideki Matsuyama -2
-+1 thru 4</td>
-      <td>Corey Conners -1
-E thru 6</td>
-      <td>Talor Gooch +1
--1 thru 16</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
-+2 thru 13</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -3
--1 thru 6</td>
-      <td>Hideki Matsuyama -2
-+1 thru 4</td>
-      <td>Justin Thomas -2
--1 thru 8</td>
-      <td>Rory McIlroy(W) +2
-E thru 14</td>
-      <td class="greyout leftborder">Tiger Woods +4
-+3 thru 10</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -492,6 +460,38 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -3
+-1 thru 6</td>
+      <td>Corey Conners -1
+E thru 6</td>
+      <td>Hideki Matsuyama E
++3 thru 5</td>
+      <td>Talor Gooch +1
+-1 thru 16</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
++2 thru 13</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -3
+-1 thru 6</td>
+      <td>Justin Thomas -2
+-1 thru 8</td>
+      <td>Hideki Matsuyama E
++3 thru 5</td>
+      <td>Rory McIlroy(W) +2
+E thru 14</td>
+      <td class="greyout leftborder">Tiger Woods +5
++4 thru 11</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-2</td>
       <td>Shane Lowry(W) -4
@@ -499,7 +499,7 @@ Missed Cut</td>
       <td>Corey Conners -1
 E thru 6</td>
       <td>Joaquin Niemann E
-+1 thru 7</td>
++1 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Sam Burns
@@ -577,7 +577,7 @@ Missed Cut</td>
       <td>Shane Lowry -4
 -1 thru 4</td>
       <td>Dustin Johnson(W) -2
-E thru 5</td>
+E thru 6</td>
       <td>Matthew Fitzpatrick +1
 +1 thru 10</td>
       <td>Tony Finau +4
@@ -632,8 +632,8 @@ Missed Cut</td>
 E thru 14</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout">Tiger Woods(W) +4
-+3 thru 10</td>
+      <td class="greyout">Tiger Woods(W) +5
++4 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -646,8 +646,8 @@ E thru 14</td>
 E thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +4
-+3 thru 10</td>
+      <td class="greyout leftborder">Tiger Woods +5
++4 thru 11</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -685,34 +685,18 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Cameron Smith -3
 -1 thru 6</td>
       <td>Corey Conners -1
 E thru 6</td>
       <td>Jon Rahm(W) +4
 +2 thru 13</td>
-      <td>Tiger Woods +4
-+3 thru 10</td>
+      <td>Tiger Woods +5
++4 thru 11</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">4</td>
-      <td>Hideki Matsuyama -2
-+1 thru 4</td>
-      <td>Justin Thomas -2
--1 thru 8</td>
-      <td>Jon Rahm(W) +4
-+2 thru 13</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -753,7 +737,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -10
 -2 thru 3</td>
       <td>Dustin Johnson -2
-E thru 5</td>
+E thru 6</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
       <td>Adam Scott +12
@@ -764,18 +748,18 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">6</td>
-      <td>Hideki Matsuyama -2
-+1 thru 4</td>
-      <td>Collin Morikawa(W) E
-+1 thru 7</td>
+      <td>Justin Thomas -2
+-1 thru 8</td>
+      <td>Hideki Matsuyama E
++3 thru 5</td>
+      <td>Jon Rahm(W) +4
++2 thru 13</td>
       <td>Patrick Cantlay +4
 +3 thru 10</td>
-      <td>Jon Rahm +4
-+2 thru 13</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -815,7 +799,7 @@ Missed Cut</td>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">7</td>
       <td>Dustin Johnson -2
-E thru 5</td>
+E thru 6</td>
       <td>Rory McIlroy(W) +2
 E thru 14</td>
       <td>Viktor Hovland +3
@@ -824,6 +808,22 @@ E thru 14</td>
 +3 thru 10</td>
       <td class="greyout leftborder">Jon Rahm +4
 +2 thru 13</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">8</td>
+      <td>Collin Morikawa(W) E
++1 thru 7</td>
+      <td>Hideki Matsuyama E
++3 thru 5</td>
+      <td>Patrick Cantlay +4
++3 thru 10</td>
+      <td>Jon Rahm +4
++2 thru 13</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -895,7 +895,7 @@ Missed Cut</td>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">11</td>
       <td>Dustin Johnson -2
-E thru 5</td>
+E thru 6</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Patrick Cantlay +4
